--- a/osbb/index.html
+++ b/osbb/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Muli:400,600,900|Open+Sans:400,600,700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/slick.css">
 	<link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -90,8 +91,88 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="about-us">
+			<div class="container">
+				<h2 class=" about-us-title">
+					последние фото
+				</h2>
+				<p class="about-us-subtitle">Мы создаем новый стиль управления жильем! Чем наш стиль работы отличается
+					от других? Мы создаем территорию для комфортного, безопасного жизни людей, доверивших управление
+					своим домом Жилой управляющей компании.</p>
+				<div class="section-slider">
+					<div class="section-slider__item">
+						<div class="section-slider__item-content">
+							<div class="section-slider__item-images">
+								<img src="./img/photo-1.png" alt="photo-1">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-2.png" alt="photo-2">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-3.png" alt="photo-3">
+							</div>
+						</div>
+					</div>
+					<div class="section-slider__item">
+						<div class="section-slider__item-content">
+							<div class="section-slider__item-images">
+								<img src="./img/photo-1.png" alt="photo-1">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-2.png" alt="photo-2">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-3.png" alt="photo-3">
+							</div>
+						</div>
+					</div>
+					<div class="section-slider__item">
+						<div class="section-slider__item-content">
+							<div class="section-slider__item-images">
+								<img src="./img/photo-1.png" alt="photo-1">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-2.png" alt="photo-2">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-3.png" alt="photo-3">
+							</div>
+						</div>
+					</div>
+					<div class="section-slider__item">
+						<div class="section-slider__item-content">
+							<div class="section-slider__item-images">
+								<img src="./img/photo-1.png" alt="photo-1">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-2.png" alt="photo-2">
+							</div>
+							<div class="section-slider__item-images">
+								<img src="./img/photo-3.png" alt="photo-3">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="section-slider__arrow">
+					<div class="left-arrow">
+						<img src="./img/left-arrow.svg" alt="arrow" class="left-slider-arrow"></div>
+					<div class="right-arrow">
+						<img src="./img/right-arrow.svg" alt="arrow" class="right-slider-arrow">
+					</div>
+				</div>
+				<div class="section-slider-description">
+					<a href="#" class="section-slider__link">смотреть все осбб</a>
+				</div>
+			</div>
+
+		</section>
 	</main>
 	<footer></footer>
+
+	<script src="js/jquery-3.0.0.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
