--- a/osbb/index.html
+++ b/osbb/index.html
@@ -167,6 +167,83 @@
 			</div>
 
 		</section>
+
+		<section class="services-desk">
+			<div class="container">
+				<h2 class=" about-us-title services-desk-title">
+					информация про коммунальные услуги
+				</h2>
+				<img src="./img/service-bg.png" class="services-desk-background" alt="background">
+				<div class="services-desk__wrapper">
+					<div class="services-desk__wrapper-text">
+						<span class="msg-paragraph"> Присоединение дома в ОСМД актуалено и для соседних домов, в которых
+							уже успешно
+							функционирует объединене.</span>
+
+						<span class="msg-paragraph msg-paragraph-1"> Совладельцы дома, желающих присоединиться к ОСМД,
+							должны провести
+							общее собрание, на которых
+							утвердят форму управления
+							домом и решат присоединиться к ОСМД, с которым имеют общую придомовую территорию, элементы
+							благоустройства и тому подобное.</span>
+
+						<span class="msg-paragraph msg-paragraph-2">
+							Далее надо письменно обратиться к председателю правления соответствующего ОСМД с просьбой
+							рассмотреть вопрос о присоединении к
+							ОСМД совладельцев дома.
+							Правление созывает общее собрание ОСМД, на которых решает вопрос о присоединении.
+						</span>
+
+						<span class="msg-paragraph msg-paragraph-3"> В случае положительного решения созывают общие
+							общее собрание с
+							участием совладельцев обеих
+							домов.
+							Там утверждают новую редакцию устава совместного ОСМД, решают другие вопросы, связанные с
+							текущей деятельностью ОСМД.
+							Новая редакция устава подают госрегистратору.</span>
+
+						<span class="msg-paragraph msg-paragraph-4"> Третий вариант присоединения дома к созданного ОСМД
+							- создание
+							ассоциации ОСМД.</span>
+
+					</div>
+					<div class="services-desk__wrapper-description">
+						<h4 class="services-desk__wrapper-description-title">
+							постачальники послуг (подати показники)
+						</h4>
+						<ul class="services-desk__wrapper-description-list">
+							<li class="services-desk__wrapper-description-item">
+								<div class="services-desk__wrapper-image">
+									<img src="./img/ellipse-1.png" alt="ellipse">
+									<span class="score">1</span>
+								</div>
+								<div class="services-desk__wrapper-description-text">
+									<span class="message">Київенерго (електропостачання)</span>
+								</div>
+							</li>
+							<li class="services-desk__wrapper-description-item">
+								<div class="services-desk__wrapper-image">
+									<img src="./img/ellipse-1.png" alt="ellipse">
+									<span class="score">2</span>
+								</div>
+								<div class="services-desk__wrapper-description-text">
+									<span class="message">Київтеплоенерго (тепло та ГВП)</span>
+								</div>
+							</li>
+							<li class="services-desk__wrapper-description-item">
+								<div class="services-desk__wrapper-image">
+									<img src="./img/ellipse-1.png" alt="ellipse">
+									<span class="score">3</span>
+								</div>
+								<div class="services-desk__wrapper-description-text">
+									<span class="message">Київводоканал (ХВП)</span>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer></footer>
 
